Created Users ,Drivers Modules

--- a/src/index.html
+++ b/src/index.html
@@ -204,20 +204,7 @@
                             <div class="right">
                                 <div class="half-circle"></div>
                             </div>
-                        </div>appShell
-application
-class
-component
-directive
-enum
-guard
-interface
-library
-module
-pipe
-service
-serviceWorker
-universal
+                        </div>
                     </div>
                 </div>
                 <!-- / Material Design Spinner -->
