--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
 
         <title>India Car</title>
         <base href="/">
-
         <meta charset="utf-8">
-        <meta name="description" content="Material design admin template with pre-built apps and pages">
+        <meta name="description" content="India  Car">
         <meta name="keywords"
               content="HTML,CSS,AngularJS,Angular,Angular 2,Angular 4,Angular 5,Angular 6,Angular 7,Material,Material 2">
         <meta name="author" content="Withinpixels">
@@ -215,22 +214,7 @@
         <!-- / FUSE Splash Screen -->
 
         <app></app>
-       <!-- <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
-        <script>
-            document.addEventListener('mousewheel', (evt) => {
-                // ... do stuff with evt
-            }, {
-                capture: true,
-                passive: false
-            });
-            document.addEventListener('wheel', (evt) => {
-                // ... do stuff with evt
-            }, {
-                capture: true,
-                passive: false
-            });
 
-        </script> -->
     </body>
 
 
