--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
               content="HTML,CSS,AngularJS,Angular,Angular 2,Angular 4,Angular 5,Angular 6,Angular 7,Material,Material 2">
         <meta name="author" content="Withinpixels">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link href="assets/icons/meteocons/style.css" rel="stylesheet">
